Added icons to project